<resources>
    <string name="googleAccountWebClientId">562383081173-tv8t3buva99ifos526p2ohrdjshdrn0f.apps.googleusercontent.com</string>
    <string name="app_name">BrandMania</string>
    <string name="title_home">Home</string>
    <string name="label_brush">Brush</string>
    <string name="title_custom">Custom</string>
    <string name="title_download">Downloads</string>
    <string name="title_profile">Profile</string>
    <string name="yourbusiness_text">Your Business</string>
    <string name="businesstitle_text">Computer Hardware</string>
    <string name="recommendation_text">Recommendation</string>
    <string name="mybusinesse_text">My Businesses</string>
    <string name="faq_text">Faq</string>
    <string name="no_brendlist_found">No Brands found</string>
    <string name="no_downloadlist_found">No Download Image found</string>
    <string name="no_favouritelist_found">No Favourite Image found</string>
    <string name="no_frmaelist_found">No Frame found</string>
    <string name="subscription_text">Subscription</string>
    <string name="submit_text">Submit</string>
    <string name="add_report_bugs">Report Bug</string>
    <string name="about_us_activity">About Us</string>
    <string name="enter_number">Enter Your Number</string>
    <string name="enter_valid_contact_number">Enter valid contact number</string>
    <string name="enter_valid_number">Enter valid number</string>
    <string name="enter_valid_email_address">Enter valid email id</string>
    <string name="enter_valid_brand_email_address">Enter valid brand email id</string>
    <string name="ismart_homes_logo">iSmart Homes Logo</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="enter_problem">Enter problem</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="please_attech_one_screeshot">Please Attach one screenshot.</string>
    <string name="there_is_something_problem_nplease_try_after_sometimes">There is something problem.\nPlease try after sometimes</string>
    <string name="partnerprogram_text">Partner Program</string>
    <string name="helpandsupport_text">Help Support</string>
    <string name="privacypolicy_text">Privacy Policy</string>
    <string name="qr_code">If you are facing some issue with payment then  scan QR code and pay with<font color="#FF0000"> GOOGLE PAY</font></string>
    <string name="Qr_code"><font color="#FF0000">GOOGLE PAY</font> is available now, scan code below and share receipt to active your account.</string>
    <string name="shareapp_text">Share App</string>
    <string name="logout">Logout</string>
    <string name="opps_no_connection">Opps, No Connection</string>
    <string name="logintitle_text">Login into app</string>
    <string name="otpverification_text">Otp Verification</string>
    <string name="sendto_text">Enter otp sent to </string>
    <string name="loginchieldtitle_text">By continuing you indicate that you have</string>
    <string name="loginchieldsectitle_text">read and agree to the</string>
    <string name="loginchieldthirtitle_text">Terms of Service</string>
    <string name="entermobileno_text">Enter Your Mobile Number</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="empty_name">Enter Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_brend_name">Enter Brand Name</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_website">Enter Website</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_your_email_id">Enter Your Email Id</string>
    <string name="enter_brand_email_id">Enter Brand Email Id</string>
    <string name="phoneno_txt">Enter Mobile Number</string>
    <string name="validphoneno_txt">Enter Valid Mobile Number</string>
    <string name="brandcategory_text">Enter Brand Category</string>
    <string name="brandname_text">Enter Brand Name</string>
    <string name="brandphone_text">Enter Brand PhoneNumber</string>
    <string name="brandwebsite_text">Enter Brand Website</string>
    <string name="brandemail_text">Enter Brand Email</string>
    <string name="brandaddress_text">Enter Brand address</string>
    <string name="upload_logo">Upload Logo</string>
    <string name="upload_frame">Upload Frame</string>
    <string name="image_download_url">https://picsum.photos/200/300/?random</string>
    <string name="magazine">Text &amp; Image</string>
    <string name="no_events_found">No Event Found</string>
    <string name="report_problem">Report Problem</string>
    <string name="upload_image">Upload Image</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">Rate this app</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancle">Reminder Me Leter</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="Rs">\u20B9</string>
    <string name="please_check_your_internet_connectivity_amp_get_online"><![CDATA[Please Check your internet connectivity & get online.]]></string>
    <string name="chooese_custom_logo">Choose Your Logo</string>


    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_mobile_email">+91 XXXX XXXX XX\n business@gmail.com</string>
    <string name="hint_mobile">+91 XXXX XXXX XX</string>
    <string name="hint_email">business@gmail.com</string>
    <string name="hint_website">www.yourbrand.com</string>
    <string name="hint_brandName">Brand Name</string>
    <string name="hint_address">your address</string>
    <string name="hint_userName">User Name</string>
    <string name="_91_xxxx_xxxx_xx_n_business_gmail_com">+91 XXXX XXXX XX\n business@gmail.com</string>

    <string name="notificationPermissionRequiredMsg">It looks like your privacy settings are preventing us from accessing your notification. You can fix this by doing the following:\n
        1. Touch the Go button below to open the Settings app.\n
        2. Turn the Notification on.</string>

</resources>