<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/itemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_10sdp">

        <RelativeLayout
            android:id="@+id/BrandNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_toStartOf="@+id/brandNameText"
                android:id="@+id/viewone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary" />

            <TextView

                android:id="@+id/brandNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:text="@string/hint_brandName"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp" />
            <View
                android:layout_toEndOf="@+id/brandNameText"
                android:id="@+id/topView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_centerVertical="true"

                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/element1"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:visibility="visible"
                android:layout_toEndOf="@+id/element"
                android:id="@+id/gmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <ImageView

                    app:tint="@color/colorPrimary"
                    android:id="@+id/gmailImage"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:src="@drawable/ic_outline_mail_24" />

                <TextView
                    android:id="@+id/gmailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/gmailImage"
                    android:includeFontPadding="false"
                    android:padding="0dp"
                    android:singleLine="true"
                    android:text="@string/hint_email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp" />

            </RelativeLayout>

            <View
                android:visibility="visible"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_centerHorizontal="true"
                android:id="@+id/element"
                android:background="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_10sdp" />
            <RelativeLayout
                android:layout_toStartOf="@+id/element"
                android:visibility="visible"
                android:id="@+id/contactLayout"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/contactImage"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_outline_call_24"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/contactText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/contactImage"
                    android:includeFontPadding="false"
                    android:padding="0dp"
                    android:singleLine="true"
                    android:text="@string/hint_mobile"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp" />

            </RelativeLayout>
        </RelativeLayout>


        <RelativeLayout
            android:gravity="center_horizontal"
            android:id="@+id/addressLayoutElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/_3sdp">

            <ImageView
                android:layout_width="@dimen/_13sdp"
                android:id="@+id/loacationImage"
                android:layout_height="@dimen/_13sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_outline_location_on_24"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/hint_address"
                android:layout_toEndOf="@+id/loacationImage"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_9sdp" />

        </RelativeLayout>

    </LinearLayout>
</layout>