<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/rootBackground"
        android:layout_height="match_parent"
        tools:context=".activity.AboutUsActivity">

        <androidx.appcompat.widget.Toolbar
            android:visibility="visible"
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/toolbar_background_second"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:id="@+id/main_linearlayout_title"
                android:elevation="0dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/BackButton"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_left_arrow"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/BackButton"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/about_us_activity"
                    android:textColor="@color/colorNavText"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"></TextView>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/scrollView"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/my_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_100sdp"
                    android:contentDescription="@string/ismart_homes_logo"
                    android:padding="@dimen/_20sdp"
                    android:src="@drawable/ismart_homes_logo_colored" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/header" />
                <TextView
                    android:id="@+id/descriptionTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/CustomCardViewStyle"
                    android:id="@+id/contactLayout"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/colorNavText"
                    android:orientation="vertical"

                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp">

                        <ImageView
                            android:layout_gravity="center_vertical"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/ic_mobile" />

                        <TextView
                            android:layout_gravity="center_vertical"
                            android:id="@+id/contactTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3sdp"
                            android:fontFamily="@font/poppins_regular"
                            android:text="+91 8000841620"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/emailLayout"
                    app:cardElevation="@dimen/_2sdp"
                    style="@style/CustomCardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/colorNavText"
                    android:orientation="vertical"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp">

                        <ImageView
                            android:layout_gravity="center_vertical"
                            android:layout_width="@dimen/_18sdp"
                            android:layout_height="@dimen/_18sdp"
                            android:src="@drawable/ic_mail" />

                        <TextView
                            android:layout_gravity="center_vertical"
                            android:id="@+id/emailTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3sdp"
                            android:fontFamily="@font/poppins_regular"
                            android:text="queryfinders.com"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/websiteLayout"
                    app:cardElevation="@dimen/_2sdp"
                    style="@style/CustomCardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/colorNavText"
                    android:orientation="vertical"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp">

                        <ImageView
                            android:layout_gravity="center_vertical"
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:src="@drawable/ic_website" />

                        <TextView
                            android:layout_gravity="center_vertical"
                            android:id="@+id/websiteTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3sdp"
                            android:fontFamily="@font/poppins_regular"
                            android:text="www.ismarthomes.in"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/noDataFoundTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/there_is_something_problem_nplease_try_after_sometimes"
            android:textAlignment="center"
            android:visibility="gone" />
    </RelativeLayout>
</layout>